2012-05-29  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_object_updater.cpp:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- 新しいマッチングアルゴリズムの動作がまだ不安定なため，テスト完了するまで旧アルゴリズムに戻す

	* rcsc/player/player_object_updater.cpp:
	- 分身が起きないように観測誤差を調整

2012-05-28  Hidehisa Akiyama  <akky@users.sourceforge.jp>

	* rcsc/player/player_object_updater.cpp:
	- デバッグ出力を停止

	* rcsc/action/intention_with_condition.cpp:
	* rcsc/action/intention_with_condition.h:
	- 未使用ファイルを削除

	* rcsc/action/body_kick_collide_with_ball.cpp:
	* rcsc/action/body_kick_collide_with_ball.h:
	* rcsc/action/Makefile.am:
	- Body_KickCollideWithBallを削除

	* rcsc/action/body_go_to_point.cpp:
	* rcsc/action/Makefile.am:
	* rcsc/action/body_go_to_point.h:
	* rcsc/action/bhv_shoot.h:
	* rcsc/action/bhv_shoot2008.cpp:
	* rcsc/action/bhv_shoot2008.h:
	* rcsc/action/body_go_to_point2009.cpp:
	* rcsc/action/body_go_to_point2009.h:
	* rcsc/action/body_go_to_point2010.cpp:
	* rcsc/action/body_go_to_point2010.h:
	* rcsc/action/obsolete/bhv_shoot.h:
	* rcsc/action/obsolete/bhv_shoot2008.cpp:
	* rcsc/action/obsolete/bhv_shoot2008.h:
	* rcsc/action/obsolete/body_go_to_point2009.cpp:
	* rcsc/action/obsolete/body_go_to_point2009.h:
	* rcsc/action/obsolete/body_go_to_point2010.cpp:
	* rcsc/action/obsolete/body_go_to_point2010.h:
	* rcsc/action/obsolete/shoot_table2008.cpp:
	* rcsc/action/obsolete/shoot_table2008.h:
	* rcsc/action/shoot_table2008.cpp:
	* rcsc/action/shoot_table2008.h:
	- obsoleteな行動クラスを移動

	* rcsc/player/player_object_updater.cpp:
	* rcsc/player/player_object_updater.h:
	* rcsc/player/Makefile.am:
	* rcsc/player/player_object.cpp:
	* rcsc/player/player_object.h:
	* rcsc/player/world_model.cpp:
	* rcsc/player/world_model.h:
	- see情報に基づくプレイヤ情報更新を再実装
	- PlayerObjectUpdaterクラスへ移譲する設計としているが，再設計が必要かもしれない
	- PlayerObjectのカウンタをWorldModelのメンバ変数からPlayerObjectク
	ラスのstaticメンバ変数へ変更．カウンタ変数はPlayerObjectのコンスト
	ラクタ内部でのみインクリメントされる
	- プレイヤカウンタ変数を0にリセットするstaticメンバ関数を
	PlayerObjectクラスに追加
